# Learn-C

./: .gitignore  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  generate_make.py
.cmake/api/v1/reply/: cache-v2-fcd43f9b8b4bc910a9cd.json  cmakeFiles-v1-0a2abeb789e88836bf0b.json  codemodel-v2-0b672bddfb0953669a8b.json  index-2025-10-22T00-29-31-0604.json  target-check_sign_print-Debug-90636eb881be27d72d92.json  target-money_division-Debug-d16a5d21e273f0b14255.json  target-polynomial-Debug-b46a754146535420e792.json  target-remaining_from_loan-Debug-e0b95981f5bd6ee3ddc0.json  target-taxation-Debug-78447d88358cedc51eec.json  target-volume_sphere-Debug-e30d21f8342cbd29c206.json
Chapter-2/: CMakeLists.txt  check_sign_print  check_sign_print.c  money_division.c  polynomial.c  remaining_from_loan.c  taxation.c  volume_sphere.c
Chapter-2/programs/: CMakeLists.txt  polynomial.c
Chapter-3/: TP_ma_boi_adam.c  anti_doublon.c  anti_duplicate.c  anti_duplicate_char.c  date_format.c  decalage.c  doublon.c  exercises3.c  format_product.c  isbn.c  matrice  matrice.c  matrix.c  number_display.c  sort_input_order.c
Chapter-4/: dec_to_octal.c  exercises4.c  reverse_digits.c
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/Chapter-2/: Makefile  check_sign_print  cmake_install.cmake  money_division  polynomial  remaining_from_loan  taxation  volume_sphere
_codeql_build_dir/Chapter-3/: Makefile  anti_doublon  cmake_install.cmake  decalage  matrice
